<resources>
    <string name="app_name">Pizzaa</string>
    <string name="order_pizza">Order Pizzas</string>
    <string name="one_pizza">One Pizza</string>
    <string name="six_pizzas">Six Pizzas</string>
    <string name="twelve_pizzas">Twelve Pizzas</string>
    <string name="choose_flavor">Choose Flavor</string>
    <string name="beef">Beef</string>
    <string name="pork">Pork</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="bacon">Bacon</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="special_flavor">Special Flavor</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="choose_pickup_date">Choose Pickup Date</string>
    <string name="order_summary">Order Summary</string>
    <string name="send">Send Order to Another App</string>
    <string name="quantity">Quantity</string>
    <string name="flavor">Flavor</string>
    <string name="pickup_date">Pickup date</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">Total %s</string>
    <string name="new_pizza_order">New Pizza Order</string>
    <string name="order_details">Quantity: %1$s \n Flavor: %2$s \nPickup date: %3$s \n
        Total: %4$s \n\n Thank you!</string>
    <plurals name="pizzas">
        <item quantity="one">%d cupcake</item>
        <item quantity="other">%d cupcakes</item>
    </plurals>

</resources>